arreglos en nav

--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,17 @@
   .banner__titulo {
     font-size: 30px;
     padding: 30px 10px;
-    letter-spacing: 15px; }
+    letter-spacing: 15px;
+    font-family: "MangoSans",sans-serif; }
 
+.promociones__divtitulo {
+  font-size: 40px;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  color: #000;
+  margin-top: 50px; }
+
+/*Carrusel */
 .carouselGallery {
   margin: calc(4vw + 4vh) auto calc(2vw + 2vh) auto; }
 
@@ -127,6 +136,16 @@
 .carouselGalleryC {
   display: none; }
 
+.container-fluid {
+  width: 92%; }
+
+.container-fluid {
+  width: 92%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto; }
+
 /*Promociones */
 .promociones {
   background-color: white; }
@@ -140,14 +159,14 @@
     margin-top: 10px; }
 
 .contenedor {
-  width: 100%;
-  margin: 10px 80px;
+  /* width: 80%; */
+  margin-left: 7rem;
   display: grid;
   grid-template-areas: "buzios zafiro casablanca" "casazul casaverde casarosa";
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(3, 1fr);
   grid-row-gap: 20px;
-  padding: 40px; }
+  /* padding: 40px;*/ }
 
 .contenedor__p-descripion {
   justify-content: center;
@@ -182,7 +201,7 @@ section.contenedor {
   grid-area: casarosa; }
 
 .contenedor__imagenPrincipal {
-  width: 250px;
+  /*width: 250px;*/
   border-radius: 10px; }
 
 .contenedor__buttoncash {
@@ -236,10 +255,10 @@ section.contenedor {
   padding: 10px 0px; }
 
 .promociones__titulo1 {
-  font-size: 60px;
+  font-size: 40PX;
   font-family: 'Merriweather', serif;
   text-align: center;
-  color: #0B0B61;
+  color: #000;
   margin-top: 150px; }
 
 /*Tabla*/
@@ -266,13 +285,17 @@ td {
   word-spacing: 2px; }
 
 .contenedor__consejoTitulo {
-  color: #0B0B61; }
+  color: #000;
+  font-family: "Oswald", sans-serif; }
+
+.contenedor__parrafo {
+  color: #888888; }
 
 /*Carrusel 2 */
 .carrusel {
   background-color: #FFFFFF;
-  width: 80%;
-  margin-left: 10%; }
+  /* width: 80%; 
+    margin-left: 10%; */ }
 
 .d-block1 {
   width: 500px;
@@ -286,10 +309,11 @@ td {
   color: #BDBDBD; }
 
 .mediosdepago__texto {
-  color: #0B0B61;
-  margin-top: 100px;
+  color: #000;
+  margin-top: 50px;
   margin-left: 3rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  font-family: "Oswald", sans-serif; }
 
 /*FOOTER */
 .pie {
@@ -350,10 +374,10 @@ td {
   font-family: "Oswald", sans-serif; }
 
 .nuestros__colchones {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 60px;
   text-align: center;
-  color: #0B0B61;
+  color: #000;
   margin-top: 2rem; }
 
 .historia {
@@ -362,11 +386,12 @@ td {
   font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-size: 30px;
-  color: #000; }
+  color: #000;
+  text-align: center; }
 
 #colchonContenedor {
-  width: 100%;
-  margin: 30px 80px;
+  width: 80%;
+  margin: 30px 150px;
   display: grid;
   justify-content: space-evenly;
   grid-template-areas: "matter1 matter2 matter3" "matter4 matter5 matter6";
@@ -437,20 +462,22 @@ section.contenedor1 {
 
 .consejo__informacion {
   text-align: left;
-  color: #0B2161; }
+  color: #000; }
 
 .consejo__parrafo {
-  color: #000; }
+  color: #888888;
+  font-family: "Oswald", sans-serif; }
 
 .consejos2__informacion {
   margin-top: 10px;
-  color: #0B2161; }
+  color: #000;
+  font-family: "Oswald", sans-serif; }
 
 .datosColchones {
   margin-left: 2rem; }
 
 .dato__conteiner {
-  width: 100%;
+  /*width: $max-width;*/
   margin: 30px 80px;
   display: grid;
   justify-content: space-between;
@@ -468,7 +495,8 @@ section.contenedor1 {
 
 .dato__titulo {
   margin-top: 35px;
-  color: #0B0B61; }
+  color: #000;
+  font-family: "Oswald", sans-serif; }
 
 .dato__text1 {
   font-size: 15px;
@@ -516,11 +544,11 @@ section.contenedor1 {
   margin-left: 10px;
   font-size: 60px;
   text-align: center;
-  font-family: "Oswald", sans-serif;
-  color: #0B0B61; }
+  font-family: 'Merriweather', serif;
+  color: #000; }
 
 .text-center2 {
-  color: #0b0b61;
+  color: #000;
   margin-left: 10rem; }
 
 .accordion {
@@ -541,7 +569,7 @@ section.contenedor1 {
   margin-left: 10rem;
   font-size: 40px;
   font-family: "Oswald", sans-serif;
-  color: #0B0B61; }
+  color: #000; }
 
 #SommierContenedor {
   width: 90%;
@@ -609,7 +637,7 @@ section.sommier {
   color: #000; }
 
 .titulo__info {
-  color: #0B2161;
+  color: #000;
   font-size: 3rem;
   margin-top: 8rem;
   margin-bottom: 2rem;
@@ -618,7 +646,8 @@ section.sommier {
 .text-sm-start {
   margin-bottom: 2rem;
   margin-left: 3rem;
-  font-size: 20px; }
+  font-size: 20px;
+  color: #888888; }
 
 .bannerQuienes {
   padding: 100px 120px;
@@ -710,7 +739,8 @@ section.sommier {
   justify-content: center;
   text-decoration: none;
   color: #ffffff;
-  margin-left: 90px; }
+  margin-left: 90px;
+  margin-top: 20px; }
 
 .flex__conteiner {
   display: flex;
@@ -966,6 +996,8 @@ section.sommier {
     display: none; }
   .logotipo__img {
     display: none; }
+  .d-flex {
+    display: none !important; }
   .promociones__titulo {
     font-size: 40px; }
   .carouselGallery__imgContainer {
