--- a/sass/components/_contactanos.scss
+++ b/sass/components/_contactanos.scss
@@ -54,6 +54,7 @@
         text-decoration: none;
         color: #ffffff;
         margin-left: 90px;
+        margin-top:20px;
     }
 
         .flex__conteiner {
