--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -221,6 +221,10 @@
         display: none;
     }
 
+    .d-flex{
+
+        display: none!important;
+    }
     .promociones__titulo {
         font-size: 40px;
     }
