--- a/sass/components/_inicio.scss
+++ b/sass/components/_inicio.scss
@@ -99,6 +99,12 @@
 }
 
 /*Carrusel */ 
+.carousel2{
+    display:none;
+}
+#carouselGallaryB{
+    display:none;
+}
 .carouselGallery {
     margin: calc(4vw + 4vh) auto calc(2vw + 2vh) auto;
 }
@@ -125,6 +131,7 @@
     transform: translateZ(0);
     will-change: transform;
     perspective: 1000;
+    cursor:none;
 
 }
 
