cambios en colchones y ctc

--- a/sass/components/_colchones.scss
+++ b/sass/components/_colchones.scss
@@ -139,6 +139,11 @@ section.contenedor1 {
     font-family: $font-principal;
 }
 
+.consejos2__titulo{
+    display:flex;
+    justify-content: center;
+    font-size:30px;
+}
 .datosColchones {
     margin-left: 2rem;
 }
