--- a/sass/components/_colchones.scss
+++ b/sass/components/_colchones.scss
@@ -177,6 +177,8 @@ section.contenedor1 {
     margin-top: 35px;
     color:#000;
     font-family:$font-principal ;
+    display:flex;
+    justify-content: center;
 }
 
 .dato__text1 {
