--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -309,7 +309,6 @@
     opacity: 90%;
     padding: 20px;
     margin: -100px;
-    margin-right: 00px;
     border: 1px solid #000000;
     z-index: 2;
 }
@@ -506,6 +505,9 @@
 
     /* Sommier */
 
+    .bannersommier{
+        display: none;
+    }
     .text-center2 {
         color: #000;
         margin-left: 5rem;
