--- a/css/main.css
+++ b/css/main.css
@@ -1087,7 +1087,10 @@ section.sommier {
   .d-flex {
     display: none !important; }
   .promociones__titulo {
-    font-size: 40px; }
+    font-size: 40PX;
+    font-family: 'Merriweather', serif;
+    text-align: center;
+    color: #000; }
   .promociones__divtitulo {
     display: none; }
   .carouselGallery__imgContainer {
@@ -1108,6 +1111,10 @@ section.sommier {
     grid-template-areas: "buzios zafiro" "casablanca casarosa " " casaverde casaazul";
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr); }
+  .contenedor__p-descripion {
+    width: 200px;
+    font-size: 15px;
+    text-align: left; }
   .promo1 {
     font-size: 30px; }
   .contenedor__imagenPrincipal {
@@ -1125,6 +1132,13 @@ section.sommier {
   .consejos2 {
     padding: 5px 3px;
     font-size: 10px; }
+  .contenedor__consejos2 {
+    font-size: 15px;
+    font-family: "Oswald", sans-serif;
+    text-align: left;
+    margin-left: 1rem;
+    margin-top: 50px;
+    word-spacing: 2px; }
   .mediosdepago__texto {
     display: none; }
   .carrusel {
@@ -1184,9 +1198,9 @@ section.sommier {
     display: none; }
   .text-center2 {
     color: #000;
-    margin-left: 5rem; }
+    margin-left: 2em; }
   .accordion {
-    margin-left: 5rem;
+    margin-left: 3rem;
     width: 75%; }
   .opciones__sommier2 {
     margin-top: 6rem;
@@ -1247,8 +1261,14 @@ section.sommier {
     flex: 1;
     text-align: center;
     padding: 20px; }
+  .text__texto {
+    justify-content: center;
+    text-decoration: none;
+    color: #ffffff;
+    margin-left: 2rem;
+    margin-top: 20px; }
   .contactInfo__ul {
-    font-size: 20px; }
+    font-size: 1rem; }
   .flex__conteiner {
     display: flex;
     align-items: center;
