--- a/css/main.css
+++ b/css/main.css
@@ -1112,7 +1112,7 @@ section.sommier {
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr); }
   .contenedor__p-descripion {
-    width: 200px;
+    width: 150px;
     font-size: 15px;
     text-align: left; }
   .promo1 {
@@ -1124,6 +1124,10 @@ section.sommier {
     text-align: center; }
   .consejop {
     font-size: 15px; }
+  .consejos__tabla {
+    margin: -1px;
+    border-collapse: collapse;
+    width: 95%; }
   table {
     margin-top: 20px;
     margin-left: 2%;
@@ -1138,7 +1142,8 @@ section.sommier {
     text-align: left;
     margin-left: 1rem;
     margin-top: 50px;
-    word-spacing: 2px; }
+    word-spacing: 2px;
+    width: 70%; }
   .mediosdepago__texto {
     display: none; }
   .carrusel {
@@ -1167,15 +1172,19 @@ section.sommier {
     display: none; }
   .nuestros_colchonesdiv {
     margin-top: 30px; }
+  .nuestros__colchones {
+    font-family: 'Merriweather', serif;
+    font-size: 40px;
+    text-align: center;
+    color: #000;
+    margin-top: 2rem; }
   #colchonContenedor {
-    width: 100%;
-    margin: 30px;
+    /* margin-left: 2rem; */
     display: grid;
     justify-content: space-evenly;
     grid-template-areas: "matter1 matter2 " "matter4 matter5" "matter3 matter6";
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 20px; }
+    grid-template-columns: repeat(2, 1fr); }
   .unocolchon {
     grid-area: matter1; }
   .doscolchon {
@@ -1193,6 +1202,15 @@ section.sommier {
     border-radius: 10px; }
   .datosColchones {
     display: none; }
+  .colchon__parrafo {
+    width: 150px;
+    font-size: 15px;
+    text-align: left;
+    /*
+        font-size: 15px;
+        width: 100%;
+        padding-right: 100px;
+        text-align: left; */ }
   /* Sommier */
   .bannersommier {
     display: none; }
@@ -1237,6 +1255,17 @@ section.sommier {
   .imagenSommier {
     width: 130px;
     border-radius: 10px; }
+  .titulo__info {
+    color: #000;
+    font-size: 2.5rem;
+    margin-top: 8rem;
+    margin-bottom: 2rem;
+    margin-left: .5rem; }
+  .text-sm-start {
+    margin-bottom: 2rem;
+    margin-left: .5rem;
+    font-size: 20px;
+    color: #888888; }
   /* Nosotros */
   .bannerQuienes {
     display: none; }
