--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -175,6 +175,7 @@
         font-size: 10px;
     }
 
+
     .mediosdepago__texto {
         display: none;
     }
@@ -384,7 +385,7 @@
     }
 
     .contenedor__p-descripion {
-        width: 200px;
+        width: 150px;
         font-size: 15px;
         text-align: left;
     }
@@ -407,6 +408,11 @@
     .consejop {
         font-size: 15px;
     }
+    .consejos__tabla {
+        margin:-1px;
+        border-collapse: collapse;
+        width:95%;
+    }
 
     table {
         margin-top: 20px;
@@ -427,6 +433,7 @@
         margin-left: 1rem;
         margin-top: 50px;
         word-spacing: 2px;
+        width:70%;
     }
 
 
@@ -459,6 +466,7 @@
     .pie__divdato {
     font-size: 10px;
  }
+
     .pie__new {
         display: none;
         font-size: 12px;
@@ -480,9 +488,16 @@
         margin-top: 30px;
     }
 
+    .nuestros__colchones {
+        font-family: 'Merriweather', serif;
+        font-size: 40px;
+        text-align: center;
+        color: #000;
+        margin-top: 2rem;
+    }
+
     #colchonContenedor {
-        width: 100%;
-        margin: 30px;
+       /* margin-left: 2rem; */
         display: grid;
         justify-content: space-evenly;
         grid-template-areas:
@@ -491,9 +506,8 @@
             "matter3 matter6";
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
-        grid-row-gap: 20px;
+        
     }
-
     .unocolchon {
         grid-area: matter1
     }
@@ -525,6 +539,19 @@
 
     .datosColchones {
         display: none;
+    }
+
+
+    .colchon__parrafo {
+
+        width: 150px;
+        font-size: 15px;
+        text-align: left;
+        /*
+        font-size: 15px;
+        width: 100%;
+        padding-right: 100px;
+        text-align: left; */
     }
 
     /* Sommier */
@@ -601,6 +628,21 @@
         border-radius: 10px;
     }
 
+.titulo__info {
+    color: #000;
+    font-size: 2.5rem;
+    margin-top: 8rem;
+    margin-bottom: 2rem;
+    margin-left: .5rem;
+}
+
+    .text-sm-start {
+        margin-bottom: 2rem;
+        margin-left: .5rem;
+        font-size: 20px;
+        color: #888888;
+    }
+
     /* Nosotros */
     .bannerQuienes {
         display: none;
@@ -641,6 +683,7 @@
         padding: 20px;
 
     }
+
     .text__texto{
         justify-content: center;
         text-decoration: none;
@@ -652,6 +695,7 @@
     .contactInfo__ul {
         font-size: 1rem;
     }
+
     .flex__conteiner {
         display: flex;
         align-items: center;
@@ -663,4 +707,4 @@
     }
 
 
-}
+    }
