--- a/css/main.css
+++ b/css/main.css
@@ -1178,8 +1178,16 @@ section.sommier {
     text-align: center;
     color: #000;
     margin-top: 2rem; }
-  #colchonContenedor {
+  .historia {
     /* margin-left: 2rem; */
+    margin-top: 7rem;
+    font-family: "Oswald", sans-serif;
+    font-size: 30px;
+    font-size: 30px;
+    color: #000;
+    text-align: center; }
+  #colchonContenedor {
+    margin-left: 2rem;
     display: grid;
     justify-content: space-evenly;
     grid-template-areas: "matter1 matter2 " "matter4 matter5" "matter3 matter6";
@@ -1211,6 +1219,19 @@ section.sommier {
         width: 100%;
         padding-right: 100px;
         text-align: left; */ }
+  .consejos2__titulo {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin-left: 2rem; }
+  .consejo__informacion {
+    text-align: left;
+    color: #000;
+    margin-left: .5rem; }
+  .consejo__parrafo {
+    color: #888888;
+    font-family: "Oswald", sans-serif;
+    margin-left: .5rem; }
   /* Sommier */
   .bannersommier {
     display: none; }
