--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -495,9 +495,18 @@
         color: #000;
         margin-top: 2rem;
     }
+    .historia {
+        /* margin-left: 2rem; */
+        margin-top: 7rem;
+        font-family: "Oswald", sans-serif;
+        font-size: 30px;
+        font-size: 30px;
+        color: #000;
+        text-align: center;
+    }
 
     #colchonContenedor {
-       /* margin-left: 2rem; */
+        margin-left: 2rem;
         display: grid;
         justify-content: space-evenly;
         grid-template-areas:
@@ -552,6 +561,26 @@
         width: 100%;
         padding-right: 100px;
         text-align: left; */
+    }
+
+
+    .consejos2__titulo {
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        margin-left: 2rem;
+    }
+
+    .consejo__informacion {
+        text-align: left;
+        color: #000;
+        margin-left: .5rem;
+    }
+
+    .consejo__parrafo {
+        color: #888888;
+        font-family: "Oswald", sans-serif;
+        margin-left: .5rem;
     }
 
     /* Sommier */
