cambios varios mediaqueries

--- a/css/main.css
+++ b/css/main.css
@@ -996,7 +996,6 @@ section.sommier {
     display: none; }
   /*Colchones*/
   #colchonContenedor {
-    width: 80%;
     margin: 30px 80px;
     display: grid;
     justify-content: space-evenly;
@@ -1091,6 +1090,8 @@ section.sommier {
     font-family: 'Merriweather', serif;
     text-align: center;
     color: #000; }
+  .promociones__div {
+    display: none; }
   .promociones__divtitulo {
     display: none; }
   .carouselGallery__imgContainer {
@@ -1101,10 +1102,14 @@ section.sommier {
     width: 100%; }
   .banner {
     display: none; }
-  #promociones {
-    margin-top: 100px; }
   #carouselGalleryA {
     display: none; }
+  .promociones__titulo1 {
+    font-size: 40PX;
+    font-family: 'Merriweather', serif;
+    text-align: center;
+    color: #000;
+    margin-top: 1px; }
   .contenedor {
     display: grid;
     margin-left: 5px;
@@ -1143,7 +1148,7 @@ section.sommier {
     margin-left: 1rem;
     margin-top: 50px;
     word-spacing: 2px;
-    width: 70%; }
+    width: 90%; }
   .mediosdepago__texto {
     display: none; }
   .carrusel {
