--- a/sass/components/_colchones.scss
+++ b/sass/components/_colchones.scss
@@ -119,6 +119,8 @@ section.contenedor1 {
     color: #D8D8D8;
 }
 
+
+/*consejos */
 .consejos2 {
     padding: 50px 30px;
     justify-content: space-around;
